kubernetes/deployment.yaml
# Copyright 2016 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service1-pod
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port", "8081",
          "--backend", "127.0.0.1:8080",
          "--service", "my-api.endpoints.geodis-usapp.cloud.goog",
          "--rollout_strategy", "managed",
          "--healthz", "health"
        ]
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
        ports:
          - containerPort: 8081
      - name: service1-pod
        image: gcr.io/geodis-usapp/service1:latest
        ports:
          - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service2-pod
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port", "8081",
          "--backend", "127.0.0.1:8080",
          "--service", "my-api.endpoints.geodis-usapp.cloud.goog",
          "--rollout_strategy", "managed",
          "--healthz", "health"
        ]
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
        ports:
          - containerPort: 8081
      - name: service2-pod
        image: gcr.io/geodis-usapp/service2:latest
        ports:
          - containerPort: 8080
